--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -51,11 +51,11 @@ html(lang='en')
       .masthead
         ul.nav.nav-pills.pull-right
           li.active
-            a(href='#') Home
+            a(href='/') Home
           li
-            a(href='#') About
+            a(href='/about') About
           li
-            a(href='#') Contact
+            a(href='/feedback') Feedback
         h3.muted Pug - Express
       hr
       .jumbotron
