--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -68,19 +68,19 @@ html(lang='en')
         .span6
           h4 Portable
           p
-            | Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.
+            | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
           h4 Reusable
           p
-            | Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.
+            | Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
           h4 Fast
           p Maecenas sed diam eget risus varius blandit sit amet non magna.
         .span6
           h4 Scalable
           p
-            | Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.
+            | Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
           h4 Secure
           p
-            | Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.
+            | Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           h4 Editable
           p Maecenas sed diam eget risus varius blandit sit amet non magna.
       hr
